<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/aqua"
    tools:context=".DialogCategoryFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/text_choose_category"
        android:textColor="@color/navy" />

    <RadioGroup
        android:id="@+id/categoryGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/categoryOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_category_one"
            android:textColor="@color/navy" />

        <RadioButton
            android:id="@+id/categoryTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_category_two"
            android:textColor="@color/navy" />

        <RadioButton
            android:id="@+id/categoryThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_category_three"
            android:textColor="@color/navy" />

        <RadioButton
            android:id="@+id/categoryFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_category_four"
            android:textColor="@color/navy" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCategoryClose"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:textColor="@color/aqua"
            android:backgroundTint="@color/red"
            android:text="@string/btn_close" />

        <Button
            android:id="@+id/btnCategoryChoose"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/tosca"
            android:textColor="@color/navy"
            android:text="@string/btn_choose_category" />

    </LinearLayout>

</LinearLayout>