<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/navy"
    tools:context=".IntentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/text_intent_activity"
            android:textColor="@color/aqua"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMoveData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/tosca"
            android:text="@string/btn_move_data"
            android:textColor="@color/navy" />

        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/btnMoveObject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/tosca"
            android:text="@string/btn_move_object"
            android:textColor="@color/navy" />

    </LinearLayout>

    <Button
        android:id="@+id/btnMainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_main_application"
        android:textColor="@color/aqua"
        android:backgroundTint="@color/red"
        android:layout_alignParentBottom="true" />


</RelativeLayout>